k8s_config/reader/reader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reader-service
  namespace: chuck
spec:
  selector:
    app: reader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
